@@ -3,13 +3,13 @@ dnl  Configuration input file for Squid
 dnl
 dnl  Duane Wessels, wessels@nlanr.net, February 1996 (autoconf v2.9)
 dnl
-dnl  $Id: configure.in,v 1.100 1998/02/21 00:56:32 rousskov Exp $
+dnl  $Id: configure.in,v 1.101 1998/02/21 18:46:31 rousskov Exp $
 dnl
 dnl
 dnl
 AC_INIT(src/main.c)
 AC_CONFIG_HEADER(include/autoconf.h)
-AC_REVISION($Revision: 1.100 $)dnl
+AC_REVISION($Revision: 1.101 $)dnl
 AC_PREFIX_DEFAULT(/usr/local/squid)
 AC_CONFIG_AUX_DIR(aux)
 
@@ -305,16 +305,6 @@ AC_ARG_ENABLE(arp_acl,
      echo "ARP ACL lists enabled (ether address)"
      AC_DEFINE(USE_ARP_ACL)
    fi
-])
-
-AC_ARG_ENABLE(alex_code,
-[  --enable-alex_code       Enable Alex's code],
-[ if test "$enableval" = "yes" ; then
-    echo "Alex's code enabled"
-    AC_DEFINE(USE_ALEX_CODE)
-  else
-    echo "Alex's code DISABLED"
-  fi
 ])
 
 dnl Check for programs
