@@ -1,7 +1,7 @@
 /*
- * $Id: MemBuf.c,v 1.2 1998/02/21 00:56:47 rousskov Exp $
+ * $Id: MemBuf.c,v 1.3 1998/02/21 18:46:34 rousskov Exp $
  *
- * DEBUG: section ??                Memory Buffer with printf
+ * DEBUG: section 59    auto-growing Memory Buffer with printf
  * AUTHOR: Alex Rousskov
  *
  * SQUID Internet Object Cache  http://squid.nlanr.net/Squid/
